# AoC2022

./: .gitignore  .pylintrc  README.md  pyproject.toml
day01/: solver.py
day02/: solver.py
day03/: solver.py
day04/: solver.py
day05/: solver.py
day06/: solver.py
day07/: solver.py
day08/: solver.py
day09/: solver.py
day10/: solver.py
day11/: solver.py
day12/: solver.py
day13/: solver.py
day14/: solver.py
day15/: solver.py
day16/: solver.py
day17/: solver.py
